# user_login_fastapi

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: python-app.yml
app/: app.py  config.py  database.py  models.py  oauth2.py  schemas.py
static/css/: reset.css  style.css
static/templates/: index.html
templates/: index.html
tests/: test_model.py
